--- a/po/es.po
+++ b/po/es.po
@@ -6,293 +6,308 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: eye-on-cursor 2.0.0.dev\n"
+"Project-Id-Version: eye-on-cursor 2..0.0\n"
 "Report-Msgid-Bugs-To: https://github.com/djinnalexio/eye-on-cursor/issues\n"
-"POT-Creation-Date: 2024-08-26 20:18+0100\n"
-"PO-Revision-Date: 2024-08-26 21:53+0100\n"
+"POT-Creation-Date: 2025-10-21 02:22+0100\n"
+"PO-Revision-Date: 2025-10-21 02:45+0100\n"
 "Last-Translator: djinnalexio\n"
 "Language-Team: \n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.4.4\n"
+"X-Generator: Poedit 3.8\n"
 
-#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:117
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:227
+#: eye-on-cursor/lib/eye.js:116 eye-on-cursor/settings/trackerSettings.js:288
 msgid "Toggle Tracker"
 msgstr "Activar/Desactivar Rastreador"
 
-#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:122
+#: eye-on-cursor/lib/eye.js:121
 msgid "Settings"
 msgstr "Configuración"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:79
+#: eye-on-cursor/settings/eyeSettings.js:43
+msgid "Eyes"
+msgstr "Ojos"
+
+#: eye-on-cursor/settings/eyeSettings.js:51
+msgid "Layout"
+msgstr "Disposición"
+
+#: eye-on-cursor/settings/eyeSettings.js:57
+msgid "Active"
+msgstr "Activado"
+
+#: eye-on-cursor/settings/eyeSettings.js:58
+msgid "Enable the eyes"
+msgstr "Habilitar los ojos"
+
+#: eye-on-cursor/settings/eyeSettings.js:69
+msgid "Count"
+msgstr "Cantidad"
+
+#: eye-on-cursor/settings/eyeSettings.js:70
+msgid "Number of eyes"
+msgstr "Número de ojos"
+
+#: eye-on-cursor/settings/eyeSettings.js:81
+msgid "Displaying more eyes may reduce performance."
+msgstr "Mostrar más ojos puede reducir el rendimiento."
+
+#: eye-on-cursor/settings/eyeSettings.js:87
+msgid "Left"
+msgstr "Izquierda"
+
+#: eye-on-cursor/settings/eyeSettings.js:87
+msgid "Center"
+msgstr "Centro"
+
+#: eye-on-cursor/settings/eyeSettings.js:87
+msgid "Right"
+msgstr "Derecha"
+
+#: eye-on-cursor/settings/eyeSettings.js:92
+msgid "Position"
+msgstr "Posición"
+
+#: eye-on-cursor/settings/eyeSettings.js:93
+msgid "Position of the eyes on the panel"
+msgstr "Posición de los ojos en el panel"
+
+#: eye-on-cursor/settings/eyeSettings.js:105
+msgid "Index"
+msgstr "Índice"
+
+#: eye-on-cursor/settings/eyeSettings.js:106
+msgid "Index of the eyes on the panel segment"
+msgstr "Índice de los ojos en el segmento del panel"
+
+#: eye-on-cursor/settings/eyeSettings.js:122
+msgid "Width"
+msgstr "Ancho"
+
+#: eye-on-cursor/settings/eyeSettings.js:123
+msgid "Drawing space and padding"
+msgstr "Espacio de dibujo y relleno"
+
+#: eye-on-cursor/settings/eyeSettings.js:139
+msgid "Menu"
+msgstr "Menú"
+
+#: eye-on-cursor/settings/eyeSettings.js:140
+msgid "Enable the eye submenu"
+msgstr "Habilitar el submenú del ojo"
+
+#: eye-on-cursor/settings/eyeSettings.js:152
+#: eye-on-cursor/settings/trackerSettings.js:55
+msgid "Appearance"
+msgstr "Apariencia"
+
+#: eye-on-cursor/settings/eyeSettings.js:158
+msgid "Natural"
+msgstr "Natural"
+
+#: eye-on-cursor/settings/eyeSettings.js:158
+msgid "Round"
+msgstr "Redondo"
+
+#: eye-on-cursor/settings/eyeSettings.js:158
+msgid "Comic"
+msgstr "Cómico"
+
+#: eye-on-cursor/settings/eyeSettings.js:161
+#: eye-on-cursor/settings/trackerSettings.js:81
+msgid "Shape"
+msgstr "Forma"
+
+#: eye-on-cursor/settings/eyeSettings.js:162
+msgid "Shape of the eyes"
+msgstr "Forma de los ojos"
+
+#: eye-on-cursor/settings/eyeSettings.js:174
+msgid "Outline Mode"
+msgstr "Modo de Contorno"
+
+#: eye-on-cursor/settings/eyeSettings.js:175
+msgid "Draw the eyes as outline only"
+msgstr "Dibujar solo el contorno de los ojos"
+
+#: eye-on-cursor/settings/eyeSettings.js:186
+msgid "Strokes"
+msgstr "Trazos"
+
+#: eye-on-cursor/settings/eyeSettings.js:187
+msgid "Thickness of the strokes in outline mode"
+msgstr "Grosor de los trazos en modo de contorno"
+
+#: eye-on-cursor/settings/eyeSettings.js:235
+msgid "Iris Color"
+msgstr "Color del iris"
+
+#: eye-on-cursor/settings/eyeSettings.js:263
+#: eye-on-cursor/settings/trackerSettings.js:263
+msgid "Refresh Rate"
+msgstr "Frecuencia de actualización"
+
+#: eye-on-cursor/settings/eyeSettings.js:264
+#: eye-on-cursor/settings/trackerSettings.js:264
+msgid "Hz"
+msgstr "Hz"
+
+#: eye-on-cursor/settings/eyeSettings.js:275
+#: eye-on-cursor/settings/trackerSettings.js:275
+msgid "Higher refresh rates may impact performance."
+msgstr "Frecuencias de actualización más altas pueden afectar el rendimiento."
+
+#: eye-on-cursor/settings/eyeSettings.js:282
+msgid "Blinking"
+msgstr "Parpadeo"
+
+#: eye-on-cursor/settings/eyeSettings.js:287
+msgid "Eyelid Color"
+msgstr "Color del párpado"
+
+#: eye-on-cursor/settings/eyeSettings.js:298
+msgid "Manual"
+msgstr "Manual"
+
+#: eye-on-cursor/settings/eyeSettings.js:298
+msgid "Synced"
+msgstr "Sincronizado"
+
+#: eye-on-cursor/settings/eyeSettings.js:298
+msgid "Unsynced"
+msgstr "Asincrónico"
+
+#: eye-on-cursor/settings/eyeSettings.js:301
+msgid "Blink Mode"
+msgstr "Modo de parpadeo"
+
+#: eye-on-cursor/settings/eyeSettings.js:302
+msgid "Choose how eyes blink"
+msgstr "Elija cómo parpadean los ojos"
+
+#: eye-on-cursor/settings/eyeSettings.js:316
+msgid "Manual Blink"
+msgstr "Parpadeo manual"
+
+#: eye-on-cursor/settings/eyeSettings.js:325
+msgid "Synced Blinking Interval"
+msgstr "Intervalo de parpadeo sincronizado"
+
+#: eye-on-cursor/settings/eyeSettings.js:326
+msgid "Seconds between synchronized blinks"
+msgstr "Segundos entre parpadeos sincronizados"
+
+#: eye-on-cursor/settings/eyeSettings.js:343
+msgid "Unsynced Blinking Interval"
+msgstr "Intervalo de parpadeo asincrónico"
+
+#: eye-on-cursor/settings/eyeSettings.js:344
+msgid "Range of seconds between random blinks"
+msgstr "Rango de segundos entre parpadeos aleatorios"
+
+#: eye-on-cursor/settings/eyeSettings.js:412
+msgid "to"
+msgstr "a"
+
+#: eye-on-cursor/settings/keybinding.js:46
+msgid "Set a shortcut"
+msgstr "Establecer un atajo"
+
+#: eye-on-cursor/settings/keybinding.js:55
+msgid "New shortcut…"
+msgstr "Nuevo atajo…"
+
+#: eye-on-cursor/settings/keybinding.js:98
+msgid "Press Esc to cancel or Backspace to disable the shortcut"
+msgstr "Presiona Esc para cancelar o Retroceso para desactivar el atajo"
+
+#: eye-on-cursor/settings/about.js:80
 msgid "About"
 msgstr "Acerca de"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:80
+#: eye-on-cursor/settings/about.js:81
 msgid "Development information and credits"
 msgstr "Información de desarrollo y créditos"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:112
+#: eye-on-cursor/settings/about.js:113
 msgctxt "(USER)NAME EMAIL/URL"
 msgid "translator_credits"
 msgstr "djinnalexio https://github.com/djinnalexio/"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:118
+#: eye-on-cursor/settings/about.js:119
 msgid "Extension Page"
 msgstr "Página de la extensión"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:121
+#: eye-on-cursor/settings/about.js:122
+msgid "Donate"
+msgstr "Donar"
+
+#: eye-on-cursor/settings/about.js:123
 msgid "Forked from"
 msgstr "Derivado de"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:124
+#: eye-on-cursor/settings/about.js:126
 msgid "Cinnamon Fork"
 msgstr "Derivado de Cinnamon"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:43
-msgid "Eyes"
-msgstr "Ojos"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:51
-msgid "Layout"
-msgstr "Disposición"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
-msgid "Left"
-msgstr "Izquierda"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
-msgid "Center"
-msgstr "Centro"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
-msgid "Right"
-msgstr "Derecha"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:62
-msgid "Position"
-msgstr "Posición"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:63
-msgid "Position of the eyes on the panel"
-msgstr "Posición de los ojos en el panel"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:75
-msgid "Index"
-msgstr "Índice"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:76
-msgid "Index of the eyes on the panel segment"
-msgstr "Índice de los ojos en el segmento del panel"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:92
-msgid "Count"
-msgstr "Cantidad"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:93
-msgid "Number of eyes"
-msgstr "Número de ojos"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:104
-msgid "Displaying more eyes may reduce performance."
-msgstr "Mostrar más ojos puede reducir el rendimiento."
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:110
-msgid "Width"
-msgstr "Ancho"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:111
-msgid "Drawing space and padding"
-msgstr "Espacio de dibujo y relleno"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:127
-msgid "Menu"
-msgstr "Menú"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:128
-msgid "Enable the eye submenu"
-msgstr "Habilitar el submenú del ojo"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:140
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:55
-msgid "Appearance"
-msgstr "Apariencia"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
-msgid "Natural"
-msgstr "Natural"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
-msgid "Round"
-msgstr "Redondo"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
-msgid "Comic"
-msgstr "Cómico"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:149
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:85
-msgid "Shape"
-msgstr "Forma"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:150
-msgid "Shape of the eyes"
-msgstr "Forma de los ojos"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:162
-msgid "Outline Mode"
-msgstr "Modo de Contorno"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:163
-msgid "Draw the eyes as outline only"
-msgstr "Dibujar solo el contorno de los ojos"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:174
-msgid "Strokes"
-msgstr "Trazos"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:175
-msgid "Thickness of the strokes in outline mode"
-msgstr "Grosor de los trazos en modo de contorno"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:223
-msgid "Iris Color"
-msgstr "Color del iris"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:251
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:202
-msgid "Refresh Rate"
-msgstr "Frecuencia de actualización"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:252
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:203
-msgid "Hz"
-msgstr "Hz"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:263
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:214
-msgid "Higher refresh rates may impact performance."
-msgstr "Frecuencias de actualización más altas pueden afectar el rendimiento."
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:270
-msgid "Blinking"
-msgstr "Parpadeo"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:275
-msgid "Eyelid Color"
-msgstr "Color del párpado"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
-msgid "Manual"
-msgstr "Manual"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
-msgid "Synced"
-msgstr "Sincronizado"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
-msgid "Unsynced"
-msgstr "Asincrónico"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:289
-msgid "Blink Mode"
-msgstr "Modo de parpadeo"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:290
-msgid "Choose how eyes blink"
-msgstr "Elija cómo parpadean los ojos"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:304
-msgid "Manual Blink"
-msgstr "Parpadeo manual"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:313
-msgid "Synced Blinking Interval"
-msgstr "Intervalo de parpadeo sincronizado"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:314
-msgid "Seconds between synchronized blinks"
-msgstr "Segundos entre parpadeos sincronizados"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:331
-msgid "Unsynced Blinking Interval"
-msgstr "Intervalo de parpadeo asincrónico"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:332
-msgid "Range of seconds between random blinks"
-msgstr "Rango de segundos entre parpadeos aleatorios"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:400
-msgid "to"
-msgstr "a"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/keybinding.js:46
-msgid "Set a shortcut"
-msgstr "Establecer un atajo"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/keybinding.js:55
-msgid "New shortcut…"
-msgstr "Nuevo atajo…"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/keybinding.js:98
-msgid "Press Esc to cancel or Backspace to disable the shortcut"
-msgstr "Presiona Esc para cancelar o Retroceso para desactivar el atajo"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:46
+#: eye-on-cursor/settings/trackerSettings.js:46
 msgid "Mouse Tracker"
 msgstr "Rastreador de ratón"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:86
+#: eye-on-cursor/settings/trackerSettings.js:82
 msgid "Shape of the tracker"
 msgstr "Forma del rastreador"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:100
+#: eye-on-cursor/settings/trackerSettings.js:93
+msgid "Select a Tracker"
+msgstr "Elige a Rastreador"
+
+#: eye-on-cursor/settings/trackerSettings.js:161
 msgid "Size"
 msgstr "Tamaño"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:101
+#: eye-on-cursor/settings/trackerSettings.js:162
 msgid "Size of the tracker"
 msgstr "Tamaño del rastreador"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:149
+#: eye-on-cursor/settings/trackerSettings.js:210
 msgid "Color"
 msgstr "Color"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:150
+#: eye-on-cursor/settings/trackerSettings.js:211
 msgid "Default color of the tracker"
 msgstr "Color predeterminado del rastreador"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:160
+#: eye-on-cursor/settings/trackerSettings.js:221
 msgid "Colors on Click"
 msgstr "Colores al hacer clic"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:161
+#: eye-on-cursor/settings/trackerSettings.js:222
 msgid "Colors when left, middle, and right-clicking"
 msgstr "Colores al hacer clic con el botón izquierdo, central y derecho"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:167
+#: eye-on-cursor/settings/trackerSettings.js:228
 msgid "Click highlighting does not work in applications on Wayland. See README."
 msgstr "El resaltado de clics no funciona en aplicaciones en Wayland. Ver README."
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:171
+#: eye-on-cursor/settings/trackerSettings.js:232
 msgid "Middle-click highlighting does not work on x11. See README."
 msgstr "El resaltado de clics medios no funciona en x11. Ver README."
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:185
+#: eye-on-cursor/settings/trackerSettings.js:246
 msgid "Opacity"
 msgstr "Opacidad"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:186
+#: eye-on-cursor/settings/trackerSettings.js:247
 msgid "Opacity of the tracker"
 msgstr "Opacidad del rastreador"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:220
+#: eye-on-cursor/settings/trackerSettings.js:281
 msgid "Keybinding"
 msgstr "Tecla"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:238
+#: eye-on-cursor/settings/trackerSettings.js:296
 msgid "Credits"
 msgstr "Créditos"
